--- a/src/components/AppBar/AppBar.module.css
+++ b/src/components/AppBar/AppBar.module.css
@@ -1,6 +1,6 @@
 .header {
-    border-bottom: 1px solid #2a363b;
-    margin-bottom: 30px;
+    background-color: rgb(255, 248, 239);
+    margin-bottom: 20px;
   }
 
 .container {
