--- a/src/components/Contact/Contact.module.css
+++ b/src/components/Contact/Contact.module.css
@@ -1,16 +1,26 @@
+.contact {
+    display: flex;
+    justify-content: space-between;
+    align-items: baseline;
+    border: 1px solid rgb(209, 209, 209);
+    padding: 3px 10px;
+    width: 80%;
+}
+
 .btndel {
-    margin-left: 7px;
-    font-size: 10px;
-    border: 1px solid rgb(236, 236, 236);
+    margin-left: 15px;
+    padding: 3px 5px; ;
+    font-size: 12px;
+    border: none;
     cursor: pointer;
-    box-shadow: 0px 1px 1px 0px rgba(182, 182, 182, 0.75);
-    background-color: white;
+    color:rgb(107, 19, 19);
+    background-color: transparent;
     border-radius: 5px;
 
 }
 
 .btndel:hover {
-    background-color: rgb(193, 251, 229);
+    background-color: rgb(251, 206, 193);
     box-shadow: 0px 1px 1px 0px rgba(193,251,229,0.75);
     border: none;
 }
