--- a/src/components/ContactForm/ContactForm.module.css
+++ b/src/components/ContactForm/ContactForm.module.css
@@ -13,21 +13,24 @@
 
 .input {
     margin-bottom: 20px;
+    padding: 5px 10px;
+    background-color: rgb(234, 234, 234);
+    border: 1px solid rgb(208, 208, 208);
+    outline: none;
 }
 
 .btn {
     display: block;
-    border: 1px solid rgb(236, 236, 236);
+    border: 1px solid rgb(208, 208, 208);
     font-size: 13px;
     border-radius: 5px;
-    padding: 3px 7px;
-    background-color: white;
+    padding: 7px 14px;
+    color: rgb(80, 119, 123);
+    background-color: transparent;
     cursor: pointer;
-    box-shadow: 0px 1px 1px 0px rgba(182, 182, 182, 0.75);
 }
 
 .btn:hover {
-    background-color: rgb(193, 251, 229);
-    box-shadow: 0px 1px 1px 0px rgba(193,251,229,0.75);
-    border: none;
+    background-color: rgb(246, 254, 251);
+
 }
